tests/spec/non_conformant/errors/interpolation/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/interpolation"

#[allow(unused)]
use super::runner;

mod error_1;
